Començant la part de producte de matrius en blocs per fer el Teorema de la PAQ.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -116,6 +116,8 @@
 
 %\setcounter{chapter}{-1}
 
+\setcounter{MaxMatrixCols}{20}
+
 \newcommand*{\titleTMB}{\begingroup% Three Men in a Boat
 	\vspace*{0.1\textheight}
 	\centering
