--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -428,7 +428,7 @@
 		Aprofitant el Teorema \myref{thm:unicitat de les inverses de les aplicacions bijectives} denotarem l'inversa d'una aplicació \(f:A\rightarrow B\) amb \(f^{-1}\), i per tant definim l'aplicació
 		\[f^{-1}\circ f=\Id_{A}.\]
 		
-		Aleshores tenim que \(Id_{A}\colon A\rightarrow A\) és l'aplicació bijectiva que satisfà \(Id_{A}(a)=a\) per a tot \(a\in A\).
+		Aleshores tenim que \(Id_{A}\colon A\rightarrow A\) és l'aplicació bijectiva i satisfà \(Id_{A}(a)=a\) per a tot \(a\in A\).
 		
 		També denotarem la conjugació d'una aplicació \(g\colon A\rightarrow A\) amb sí mateixa \(k\) de vegades com \[g^{k}=g\circ\overset{k)}{\cdots}\circ g.\]
 	\end{notation}
